# air26-ros2-ws

./: .gitignore  CLAUDE.md  README.md  frames_2026-07-08_18.41.39.gv
src/: INSTALL.md  build_all.sh
src/01_basics/: TUTORIAL.md
src/01_basics/basics_cpp/: CMakeLists.txt  package.xml
src/01_basics/basics_cpp/src/: action_client.cpp  action_server.cpp  combined_node.cpp  service_client.cpp  service_server.cpp  topic_listener.cpp  topic_talker.cpp
src/01_basics/basics_cross/: CMakeLists.txt  package.xml
src/01_basics/basics_cross/action/: CountUp.action
src/01_basics/basics_cross/basics_cross/: py_action_server.py  py_service_client.py  py_talker.py
src/01_basics/basics_cross/msg/: Greeting.msg
src/01_basics/basics_cross/src/: cpp_action_client.cpp  cpp_listener.cpp  cpp_service_server.cpp
src/01_basics/basics_cross/srv/: AddTwoInts.srv
src/02_micro_ros/microbot_description/: package.xml  setup.cfg  setup.py
src/02_micro_ros/microbot_description/mjcf/: microbot.xml
src/02_micro_ros/microbot_description/rviz/: microbot.rviz  microbot_real.rviz
src/02_micro_ros/microbot_description/urdf/: microbot.urdf.xacro
src/02_micro_ros/microbot_interfaces/: CMakeLists.txt  package.xml
src/02_micro_ros/microbot_interfaces/action/: EscapeObstacle.action
src/02_micro_ros/microbot_interfaces/srv/: CheckOpenings.srv  SetBehavior.srv
src/02_micro_ros/microbot_sim/: package.xml  setup.cfg  setup.py
src/02_micro_ros/microbot_sim/launch/: mujoco.launch.py  real.launch.py
src/02_micro_ros/microbot_sim/microbot_sim/: mujoco_driver.py  range_viz_bridge.py  scan_to_range.py
src/02_micro_ros/microbot_sim/models/: aditya_air_caster.stl  aditya_air_chassis.stl
src/03_multi_bot_bt/multibot_description/: package.xml  setup.cfg  setup.py
src/03_multi_bot_bt/multibot_description/urdf/: multibot.urdf.xacro
src/03_multi_bot_bt/multibot_description/worlds/: patrol.wbt
src/03_multi_bot_bt/multibot_perception/: package.xml  setup.cfg  setup.py
src/03_multi_bot_bt/multibot_perception/multibot_perception/: aruco_pose_detector.py  relative_localizer.py
src/03_multi_bot_bt/multibot_sim/: package.xml  setup.cfg  setup.py
src/03_multi_bot_bt/multibot_sim/launch/: patrol.launch.py
src/03_multi_bot_bt/multibot_sim/multibot_sim/: multibot_driver.py
src/03_multi_bot_bt/multibot_sim/urdf/: multibot_webots.urdf
src/04_stretch-hr-se3/stretch_se3_control/: package.xml  setup.cfg  setup.py
src/04_stretch-hr-se3/stretch_se3_control/stretch_se3_control/: head_scan.py  lift_arm.py  square_drive.py  stretch_trajectory.py  wake_up.py  wrist_gripper.py
src/04_stretch-hr-se3/stretch_se3_moveit2/: CMakeLists.txt  package.xml
src/04_stretch-hr-se3/stretch_se3_moveit2/config/: joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  stretch_se3.srdf  stretch_se3.urdf
src/04_stretch-hr-se3/stretch_se3_moveit2/launch/: move_group.launch.py  reach_demo.launch.py
src/04_stretch-hr-se3/stretch_se3_moveit2/scripts/: generate_srdf.py  trajectory_bridge.py
src/04_stretch-hr-se3/stretch_se3_moveit2/src/: reach_demo.cpp
src/04_stretch-hr-se3/stretch_se3_nav/: package.xml  setup.cfg  setup.py
src/04_stretch-hr-se3/stretch_se3_nav/config/: mapper_params.yaml  nav2_params.yaml
src/04_stretch-hr-se3/stretch_se3_nav/launch/: mapping.launch.py  navigation.launch.py
src/04_stretch-hr-se3/stretch_se3_nav/maps/: README.md  workshop_map.pgm  workshop_map.yaml
src/04_stretch-hr-se3/stretch_se3_nav/stretch_se3_nav/: cmd_vel_relay.py  waypoint_demo.py
src/05_perception/perceptbot_behaviors/: package.xml  setup.cfg  setup.py
src/05_perception/perceptbot_behaviors/launch/: behaviors.launch.py
src/05_perception/perceptbot_behaviors/perceptbot_behaviors/: behavior_manager.py  marker_approach.py  obstacle_services.py
src/05_perception/perceptbot_description/: package.xml  setup.cfg  setup.py
src/05_perception/perceptbot_description/mjcf/: perceptbot.xml
src/05_perception/perceptbot_description/urdf/: perceptbot.urdf.xacro
src/05_perception/perceptbot_interfaces/: CMakeLists.txt  package.xml
src/05_perception/perceptbot_interfaces/action/: ApproachMarker.action  EscapeObstacle.action
src/05_perception/perceptbot_interfaces/srv/: CheckOpenings.srv  SetBehavior.srv
src/05_perception/perceptbot_perception/: package.xml  setup.cfg  setup.py
src/05_perception/perceptbot_perception/launch/: real_camera.launch.py
src/05_perception/perceptbot_perception/perceptbot_perception/: camera_processor.py
src/05_perception/perceptbot_sim/: package.xml  setup.cfg  setup.py
src/05_perception/perceptbot_sim/config/: gz_bridge.yaml
src/05_perception/perceptbot_sim/launch/: gazebo.launch.py  mujoco.launch.py  webots.launch.py
src/05_perception/perceptbot_sim/perceptbot_sim/: mujoco_driver.py  perceptbot_driver.py  scan_to_range.py
src/05_perception/perceptbot_sim/resource/: perceptbot_webots.urdf
src/05_perception/perceptbot_sim/worlds/: perceptbot.sdf  perceptbot.wbt
src/06_llm-integration/llm_integration/: README.md  package.xml  setup.py
src/06_llm-integration/llm_integration/launch/: micro.launch.py  stretch.launch.py
src/06_llm-integration/llm_integration/llm_integration/: ollama_agent.py  prompt.py  robot_base.py
src/06_llm-integration/llm_integration/llm_integration/demos/: chat_terminal.py  ollama_api_demo.py
src/06_llm-integration/llm_integration/llm_integration/robots/: micro.py  stretch.py
src/07_vla_demo/vla_demo/: package.xml  setup.py
src/07_vla_demo/vla_demo/launch/: gazebo.launch.py  rviz.launch.py
src/07_vla_demo/vla_demo/vla_demo/policies/: __init__.py  smolvla_adapter.py
src/07_vla_demo/vla_so101_demo/: README.md  package.xml  setup.cfg  setup.py
src/07_vla_demo/vla_so101_demo/launch/: vla.launch.py
src/07_vla_demo/vla_so101_demo/rviz/: vla.rviz
src/07_vla_demo/vla_so101_demo/vla_so101_demo/: instruction_pub.py  mujoco_driver.py  smolvla_node.py
src/07_vla_demo/vla_so101_description/: package.xml  setup.cfg  setup.py
src/07_vla_demo/vla_so101_description/mjcf/: so_arm100.xml  tabletop_scene.xml
(+117 files in other folders)
