<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>microbot_description</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 02 — the micro-ROS obstacle-avoider robot: one URDF/xacro (skid-steer
    chassis, 4 wheels, 3 ultrasonics, motor/MCU/battery) shared by RViz and Gazebo, an
    MJCF for MuJoCo, an obstacle world, and an RViz layout.
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
