<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multibot_description</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 03 — the patrol unit: a self-contained perceptbot-style skid-steer
    rover (chassis, 4 wheels, 3 ultrasonics, front camera) PLUS ArUco marker panels on
    its BACK and RIGHT faces so the other units can see and identify it. The Webots world
    spawns three namespaced units (r1/r2/r3) + a fixed ground/world-anchor marker.
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
