<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multibot_sim</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 03 — Webots multi-bot bringup. A self-contained driver plugin (derives
    its namespace from the Webots robot name, so r1/r2/r3 each publish /rN/cmd_vel,
    /rN/ultrasonic/*, /rN/camera/*) and the patrol.launch.py that spawns the world + the
    full per-unit stack (driver + aruco_pose + localizer + py_trees BT + anchor).
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>multibot_description</exec_depend>
  <exec_depend>multibot_perception</exec_depend>
  <exec_depend>multibot_bt</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
