<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stretch_se3_control</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop — Part B (basic control) demo nodes for the Stretch (Hello Robot
    SE3) MuJoCo simulation. Checkpoint-marked nodes that drive the base, lift, arm,
    head, dex wrist and gripper through the driver's standard ROS2 interfaces
    (/stretch/cmd_vel and the FollowJointTrajectory action).
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
