<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perceptbot_interfaces</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 05 — interfaces for the perception rover (microbot + a front
    camera). Extends the project-02 set: SetBehavior now switches six behaviours
    (obstacle 1-3, light 4, colour 5, ArUco 6); CheckOpenings + EscapeObstacle are
    carried over; ApproachMarker is the new "move to / follow the ArUco marker"
    action (waypoint-like, with feedback + cancel).
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>action_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
