<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perceptbot_perception</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 05 — perception nodes that turn a camera image into things a
    behaviour can act on, independent of where the image comes from (Webots sim or
    the real ESP32-CAM). camera_processor publishes /camera/mean_intensity and
    /camera/mean_color; aruco_detector publishes ArUco detections (+ an annotated
    image). Mirrors the on-board maths the ESP32-CAM does for the cheap topics.
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
