<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>perceptbot_sim</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 05 — the Webots simulation of the perception rover. A .wbt world
    (arena + coloured objects + an ArUco marker), a webots_ros2 device URDF that maps
    the robot's distance sensors and camera to /ultrasonic/* and /camera/*, a small
    /cmd_vel skid-steer driver plugin, and the bringup launch. Webots is the target
    sim; Gazebo and MuJoCo are reference only (see THEORY.md).
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>
  <exec_depend>perceptbot_description</exec_depend>
  <exec_depend>perceptbot_perception</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
