<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vla_so101_demo</name>
  <version>0.1.0</version>
  <description>
    AIR26 workshop 07 (VLA) — the "proper" SmolVLA demo. mujoco_driver runs the SO-101
    tabletop in MuJoCo (publishes the camera + joint state, applies joint commands);
    smolvla_node runs the real SmolVLA-450M policy (text instruction + camera + state ->
    joint actions). RViz shows the camera feed + state. SmolVLA runs in an isolated venv
    (torch/lerobot); the driver is plain ROS python.
  </description>
  <maintainer email="luciuspertis@gmail.com">AIR26 Workshop</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>vla_so101_description</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
